# sumologic-cse-python-sdk

./: .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  pypath.sh  pyproject.toml  requirements.txt  test_sumologiccse.py
data/: insights-statuses.json
scripts/: config.md  test.connection.py
scripts/examples/: README.md  get_context_actions.py  get_custom_insights.py  get_entity_criticality.py  get_entity_groups.py  get_insights_list.py  get_log_mappings.py  get_rule_tuning_expressions.py  get_rules.py  get_tag_schemas.py  query_insights.py  rule_tuning_details.py
scripts/insights/: get_insights.py  readme.md  resolve_insights.py
scripts/rules/: get_rules.py  readme.md
src/sumologiccse/: __init__.py  sumologiccse.py
sumologiccse/: __init__.py  sumologiccse.py
tests/: test_sumologiccse.py
tests/data/: insight-resolutions.json
