[project]
name = "sumologiccse"
version = "0.0.1"
authors = [
  { name="Rick Jury", email="rjury@sumologic.com" },
]
description = "An API client for common use cases for the Sumologic Cloud SIEM API https://api.sumologic.com/docs/sec/#"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rjury-sumo/sumologic-cse-python-sdk"
"Bug Tracker" = "https://github.com/rjury-sumo/sumologic-cse-python-sdk/issues"