[project]
name = "sumologiccse"
version = "0.0.6"
license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["sumologic", "cse", "api", "sdk", "python", "Cloud SIEM","sumo"]
authors = [
  { name="Rick Jury", email="rjury@sumologic.com" },
]
description = "An API client for common use cases for the Sumologic Cloud SIEM API https://api.sumologic.com/docs/sec/#"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rjury-sumo/sumologic-cse-python-sdk"
"Bug Tracker" = "https://github.com/rjury-sumo/sumologic-cse-python-sdk/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"